--- a/gradle.properties
+++ b/gradle.properties
@@ -1,24 +1,24 @@
 org.gradle.jvmargs=-Xmx6G
 org.gradle.daemon=false
 
-platforms=fabric
+platforms=fabric,forge,neoforge
 
-minecraft_version=1.20.3-pre1
-supported_version=1.20.3-pre1
+minecraft_version=1.20.4
+supported_version=1.20.4
 
-artifact_type=beta
+artifact_type=release
 
 archives_base_name=architectury
 archives_base_name_snapshot=architectury-snapshot
 base_version=11.0
 maven_group=dev.architectury
 
-fabric_loader_version=0.14.23
-fabric_api_version=0.90.11+1.20.3
+fabric_loader_version=0.15.1
+fabric_api_version=0.91.1+1.20.4
 mod_menu_version=7.0.0
 
-forge_version=48.0.38
-neoforge_version=20.2.59-beta
+forge_version=49.0.3
+neoforge_version=20.4.3-beta
 
 curseforge_id=419699
 modrinth_id=lhGA9TYQ
