Build with NeoForge 20.4.46 (20.4.40+ required)
Updates mods.toml to new NeoForge scheme (mandatory -> type)

--- a/neoforge/src/main/resources/META-INF/mods.toml
+++ b/neoforge/src/main/resources/META-INF/mods.toml
@@ -16,15 +16,15 @@ license = "LGPL-3"
 
 [[dependencies.architectury]]
 modId = "minecraft"
-mandatory = true
+type = "required"
 versionRange = "[1.20.3,)"
 ordering = "NONE"
 side = "BOTH"
 
 [[dependencies.architectury]]
 modId = "neoforge"
-mandatory = true
-versionRange = "[20.3,)"
+type = "required"
+versionRange = "[20.4.40-beta,)"
 ordering = "NONE"
 side = "BOTH"
 
