--- a/gradle.properties
+++ b/gradle.properties
@@ -1,20 +1,20 @@
 org.gradle.jvmargs=-Xmx6G
 org.gradle.daemon=false
 
-platforms=fabric,forge,neoforge
+platforms=fabric
 
-minecraft_version=1.20.4
-supported_version=1.20.4
+minecraft_version=24w09a
+supported_version=1.20.5 (24w09a)
 
-artifact_type=release
+artifact_type=beta
 
 archives_base_name=architectury
 archives_base_name_snapshot=architectury-snapshot
-base_version=11.1
+base_version=12.0
 maven_group=dev.architectury
 
-fabric_loader_version=0.15.3
-fabric_api_version=0.92.0+1.20.4
+fabric_loader_version=0.15.7
+fabric_api_version=0.96.5+1.20.5
 mod_menu_version=9.0.0
 
 forge_version=49.0.14
