--- a/settings.gradle
+++ b/settings.gradle
@@ -13,12 +13,12 @@ if (JavaVersion.current().ordinal() + 1 < 17) {
 
 include("common")
 include("fabric")
-include("forge")
-include("minecraftforge")
-include("neoforge")
+//include("forge")
+//include("minecraftforge")
+//include("neoforge")
 include("testmod-common")
 include("testmod-fabric")
-include("testmod-forge")
-include("testmod-neoforge")
+//include("testmod-forge")
+//include("testmod-neoforge")
 
 rootProject.name = "architectury"
