Update to 24w14potato
Signed-off-by: shedaniel <daniel@shedaniel.me>

--- a/.github/workflows/1.20.3_push.yml
+++ b/.github/workflows/1.20.3_push.yml
@@ -8,6 +8,7 @@ on:
       - '**/src/**'
     branches:
       - "1.20.5"
+      - "1.20.5-24w14potato"
   workflow_dispatch:
     inputs:
       norelease:
