[ci skip] Port to NeoForge 24w14a
Signed-off-by: shedaniel <daniel@shedaniel.me>

--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,14 @@ subprojects {
 
     repositories {
         maven { url "https://maven.neoforged.net/releases/" }
+        if (rootProject.neoforge_pr != "") {
+            maven {
+                url "https://prmaven.neoforged.net/NeoForge/pr$rootProject.neoforge_pr"
+                content {
+                    includeModule("net.neoforged", "neoforge")
+                }
+            }
+        }
     }
 }
 
