--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.jvmargs=-Xmx6G
 org.gradle.daemon=false
 
-platforms=fabric
+platforms=fabric,neoforge
 
 minecraft_version=24w14a
 supported_version=1.20.5 (24w14a)
@@ -18,7 +18,10 @@ fabric_api_version=0.96.14+1.20.5
 mod_menu_version=9.0.0
 
 forge_version=49.0.14
-neoforge_version=20.4.77-beta
+neoforge_version=20.5.0-alpha.24w14a.20240407.201521
+
+# Set to empty if not snapshots
+neoforge_pr=787
 
 curseforge_id=419699
 modrinth_id=lhGA9TYQ
