--- a/.github/workflows/1.20.3_push.yml
+++ b/.github/workflows/1.20.3_push.yml
@@ -6,6 +6,7 @@ on:
       - '**.gradle'
       - '**.properties'
       - '**/src/**'
+      - '.github/**'
     branches:
       - "1.20.5"
   workflow_dispatch:
@@ -24,10 +25,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up JDK 17
+      - name: Set up JDK 21
         uses: actions/setup-java@v2
         with:
-          java-version: 17
+          java-version: 21
           distribution: 'temurin'
 
       - name: Validate Gradle Wrapper
