Port to 1.20.5-pre1
Signed-off-by: shedaniel <daniel@shedaniel.me>

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 org.gradle.jvmargs=-Xmx6G
 org.gradle.daemon=false
 
-platforms=fabric,neoforge
+platforms=fabric
 
-minecraft_version=24w14a
-supported_version=1.20.5 (24w14a)
+minecraft_version=1.20.5-pre1
+supported_version=1.20.5-pre1
 
 artifact_type=beta
 
@@ -15,14 +15,14 @@ maven_group=dev.architectury
 version_suffix=-beta
 
 fabric_loader_version=0.15.9
-fabric_api_version=0.96.14+1.20.5
+fabric_api_version=0.96.15+1.20.5
 mod_menu_version=9.0.0
 
 forge_version=49.0.14
 neoforge_version=20.5.0-alpha.24w14a.20240407.201521
 
 # Set to empty if not snapshots
-neoforge_pr=787
+neoforge_pr=794
 
 curseforge_id=419699
 modrinth_id=lhGA9TYQ
