--- a/settings.gradle
+++ b/settings.gradle
@@ -7,18 +7,18 @@ pluginManagement {
     }
 }
 
-if (JavaVersion.current().ordinal() + 1 < 17) {
-    throw new IllegalStateException("Please run gradle with Java 17+!")
+if (JavaVersion.current().ordinal() + 1 < 21) {
+    throw new IllegalStateException("Please run gradle with Java 21+!")
 }
 
 include("common")
 include("fabric")
 //include("forge")
 //include("minecraftforge")
-include("neoforge")
+//include("neoforge")
 include("testmod-common")
 include("testmod-fabric")
 //include("testmod-forge")
-include("testmod-neoforge")
+//include("testmod-neoforge")
 
 rootProject.name = "architectury"
