port to 1.20.5-rc1

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ org.gradle.daemon=false
 
 platforms=fabric
 
-minecraft_version=1.20.5-pre1
-supported_version=1.20.5-pre1
+minecraft_version=1.20.5-rc1
+supported_version=1.20.5-rc1
 
 artifact_type=beta
 
@@ -15,11 +15,11 @@ maven_group=dev.architectury
 version_suffix=-beta
 
 fabric_loader_version=0.15.9
-fabric_api_version=0.96.15+1.20.5
-mod_menu_version=9.0.0
+fabric_api_version=0.97.5+1.20.5
+mod_menu_version=10.0.0-alpha.1
 
 forge_version=49.0.14
-neoforge_version=20.5.0-alpha.24w14a.20240407.201521
+neoforge_version=20.5.0-alpha.1.20.5-rc1.20240421.201604
 
 # Set to empty if not snapshots
 neoforge_pr=794
