--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ org.gradle.daemon=false
 
 platforms=fabric
 
-minecraft_version=1.20.5-rc1
-supported_version=1.20.5-rc1
+minecraft_version=1.20.5
+supported_version=1.20.5
 
 artifact_type=beta
 
@@ -14,15 +14,15 @@ base_version=12.0
 maven_group=dev.architectury
 version_suffix=-beta
 
-fabric_loader_version=0.15.9
-fabric_api_version=0.97.5+1.20.5
-mod_menu_version=10.0.0-alpha.1
+fabric_loader_version=0.15.10
+fabric_api_version=0.97.6+1.20.5
+mod_menu_version=10.0.0-beta.1
 
-forge_version=49.0.14
-neoforge_version=20.5.0-alpha.1.20.5-rc1.20240421.201604
+forge_version=50.0.0
+neoforge_version=20.5.0-beta
 
 # Set to empty if not snapshots
-neoforge_pr=794
+neoforge_pr=
 
 curseforge_id=419699
 modrinth_id=lhGA9TYQ
