--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,18 @@
 org.gradle.jvmargs=-Xmx6G
 org.gradle.daemon=false
 
-platforms=fabric
+platforms=fabric,neoforge
 
 minecraft_version=1.20.5
 supported_version=1.20.5
 
-artifact_type=beta
+artifact_type=release
 
 archives_base_name=architectury
 archives_base_name_snapshot=architectury-snapshot
 base_version=12.0
 maven_group=dev.architectury
-version_suffix=-beta
+version_suffix=
 
 fabric_loader_version=0.15.10
 fabric_api_version=0.97.6+1.20.5
