--- a/gradle.properties
+++ b/gradle.properties
@@ -1,28 +1,28 @@
 org.gradle.jvmargs=-Xmx6G
 org.gradle.daemon=false
 
-platforms=fabric
+platforms=fabric,neoforge
 
-minecraft_version=1.20.5-pre1
-supported_version=1.20.5-pre1
+minecraft_version=1.20.5
+supported_version=1.20.5
 
-artifact_type=beta
+artifact_type=release
 
 archives_base_name=architectury
 archives_base_name_snapshot=architectury-snapshot
 base_version=12.0
 maven_group=dev.architectury
-version_suffix=-beta
+version_suffix=
 
-fabric_loader_version=0.15.9
-fabric_api_version=0.96.15+1.20.5
-mod_menu_version=9.0.0
+fabric_loader_version=0.15.10
+fabric_api_version=0.97.6+1.20.5
+mod_menu_version=10.0.0-beta.1
 
-forge_version=49.0.14
-neoforge_version=20.5.0-alpha.24w14a.20240407.201521
+forge_version=50.0.0
+neoforge_version=20.5.0-beta
 
 # Set to empty if not snapshots
-neoforge_pr=794
+neoforge_pr=
 
 curseforge_id=419699
 modrinth_id=lhGA9TYQ
