--- a/gradle.properties
+++ b/gradle.properties
@@ -19,10 +19,10 @@ fabric_api_version=0.100.0+1.21
 mod_menu_version=10.0.0-beta.1
 
 forge_version=51.0.0
-neoforge_version=20.7.0-beta
+neoforge_version=21.0.0-alpha.1.21-pre4.20240609.204207
 
 # Set to empty if not snapshots
-neoforge_pr=
+neoforge_pr=1076
 
 curseforge_id=419699
 modrinth_id=lhGA9TYQ
