--- a/testmod-forge/build.gradle
+++ b/testmod-forge/build.gradle
@@ -26,8 +26,7 @@ configurations {
 dependencies {
     forge "net.minecraftforge:forge:${gradle.rootProject.architectury.minecraft}-${rootProject.forge_version}"
 
-    implementation project(path: ":minecraftforge", configuration: "namedElements")
+    implementation project(path: ":forge", configuration: "namedElements")
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     common(project(path: ":testmod-common", configuration: "namedElements")) { transitive false }
-    common(project(path: ":forge", configuration: "namedElements")) { transitive false }
 }
