Finish port to 1.21

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.daemon=false
 
 platforms=fabric,neoforge
 
-minecraft_version=1.21-pre4
-supported_version=1.21-pre4
+minecraft_version=1.21
+supported_version=1.21
 
-artifact_type=beta
+artifact_type=release
 
 archives_base_name=architectury
 archives_base_name_snapshot=architectury-snapshot
@@ -19,10 +19,10 @@ fabric_api_version=0.100.0+1.21
 mod_menu_version=10.0.0-beta.1
 
 forge_version=51.0.0
-neoforge_version=21.0.0-alpha.1.21-pre4.20240609.204207
+neoforge_version=21.0.0-beta
 
 # Set to empty if not snapshots
-neoforge_pr=1076
+neoforge_pr=
 
 curseforge_id=419699
 modrinth_id=lhGA9TYQ
