--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -122,7 +122,7 @@ unifiedPublishing {
         displayName = "[NeoForge $rootProject.supported_version] v$project.version"
         releaseType = "$rootProject.artifact_type"
         changelog = releaseChangelog()
-        gameVersions = ["1.21-pre1"]
+        gameVersions = ["1.21"]
         gameLoaders = ["neoforge"]
         mainPublication renameJarForPublication
 
