--- a/gradle.properties
+++ b/gradle.properties
@@ -16,10 +16,10 @@ version_suffix=
 
 fabric_loader_version=0.15.11
 fabric_api_version=0.100.0+1.21
-mod_menu_version=10.0.0-beta.1
+mod_menu_version=11.0.1
 
 forge_version=51.0.0
-neoforge_version=21.0.31-beta
+neoforge_version=21.0.42-beta
 
 # Set to empty if not snapshots
 neoforge_pr=
