--- a/gradle.properties
+++ b/gradle.properties
@@ -1,21 +1,21 @@
 org.gradle.jvmargs=-Xmx6G
 org.gradle.daemon=false
 
-platforms=fabric,neoforge
+platforms=fabric
 
-minecraft_version=1.21
-supported_version=1.21
+minecraft_version=24w40a
+supported_version=1.21.2 (24w40a)
 
-artifact_type=release
+artifact_type=beta
 
 archives_base_name=architectury
 archives_base_name_snapshot=architectury-snapshot
-base_version=13.0
+base_version=14.0
 maven_group=dev.architectury
 version_suffix=
 
-fabric_loader_version=0.15.11
-fabric_api_version=0.100.0+1.21
+fabric_loader_version=0.16.5
+fabric_api_version=0.105.2+1.21.2
 mod_menu_version=11.0.1
 
 forge_version=51.0.0
