--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.daemon=false
 
 platforms=fabric
 
-minecraft_version=24w40a
-supported_version=1.21.2 (24w40a)
+minecraft_version=1.21.2
+supported_version=1.21.2
 
-artifact_type=beta
+artifact_type=release
 
 archives_base_name=architectury
 archives_base_name_snapshot=architectury-snapshot
@@ -14,8 +14,8 @@ base_version=14.0
 maven_group=dev.architectury
 version_suffix=
 
-fabric_loader_version=0.16.5
-fabric_api_version=0.105.2+1.21.2
+fabric_loader_version=0.16.7
+fabric_api_version=0.106.1+1.21.2
 mod_menu_version=11.0.1
 
 forge_version=51.0.0
