--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.jvmargs=-Xmx6G
 org.gradle.daemon=false
 
-platforms=fabric
+platforms=fabric,neoforge
 
 minecraft_version=1.21.2
 supported_version=1.21.2
@@ -19,7 +19,7 @@ fabric_api_version=0.106.1+1.21.2
 mod_menu_version=11.0.1
 
 forge_version=51.0.0
-neoforge_version=21.0.114-beta
+neoforge_version=21.2.0-beta
 
 # Set to empty if not snapshots
 neoforge_pr=
